--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
 /bin/
+
 /.gradle/
 /.settings/
 /build/
-.classpath
+/.classpath
+/config/
+/logs/
+/screenshots/
+/crash-reports/
+/saves/
+/options.txt
+/usernamecache.json
+/world/
+/banned-ips.json
+/banned-players.json
+/eula.txt
+/ops.json
+/server.properties
+/servers.dat
+/usercache.json
+/whitelist.json
