--- a/build.gradle
+++ b/build.gradle
@@ -11,18 +11,20 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.0-SNAPSHOT'
     }
 }
 
-apply plugin: 'forge'
+plugins {
+    id "net.minecraftforge.gradle.forge" version "2.0.1"
+}
 
 version = "1.3"
 group= "mod.chiselsandbits" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "chiselsandbits"
 
 minecraft {
-    version = "1.8-11.14.2.1423"
+    version = "1.8-11.14.3.1506"
     runDir = "eclipse"
     mappings = "snapshot_20141130"
 }
