--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,25 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
     }
 }
-
-apply plugin: 'forge'
+apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "1.5"
 group= "mod.chiselsandbits" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "chiselsandbits"
 
 minecraft {
-    version = "1.8-11.14.2.1423"
+    version = "1.8.8-11.14.4.1576-1.8.8"
     runDir = "eclipse"
-    mappings = "snapshot_20141130"
+    mappings = "snapshot_20151122"
 }
 
 dependencies {
