--- a/build.gradle
+++ b/build.gradle
@@ -13,16 +13,16 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "1.5.1"
-group= "mod.chiselsandbits" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group= "mod.chiselsandbits"
 archivesBaseName = "chiselsandbits"
 
 repositories { maven { url "http://dvs1.progwml6.com/files/maven" } }
 dependencies { deobfCompile "mezz.jei:jei_1.8.8:2.2.0.15" }
 
 minecraft {
-    version = "1.8.8-11.14.4.1576-1.8.8"
+    version = "1.8.8-11.14.4.1619-1.8.8"
     runDir = "eclipse"
-    mappings = "snapshot_20151122"
+    mappings = "snapshot_20151211"
 }
 
 dependencies {
