--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.6"
+version = "mc1.8.8-v1.7"
 group= "mod.chiselsandbits"
 archivesBaseName = "chiselsandbits"
 
