--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.6"
+version = "mc1.8-v1.6.1"
 group= "mod.chiselsandbits" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "chiselsandbits"
 
