--- a/build.gradle
+++ b/build.gradle
@@ -12,21 +12,21 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "mc1.8.9-v1.7.5"
+version = "mc1.8.9-v1.8-dev"
 group= "mod.chiselsandbits"
 archivesBaseName = "chiselsandbits"
 
-repositories { maven { url "http://dvs1.progwml6.com/files/maven" } }
-dependencies { deobfCompile "mezz.jei:jei_1.8.8:2.12.0.49" }
+repositories { maven { url "http://dvs1.progwml6.com/files/maven" } 
+   flatDir {
+       dirs 'libs'
+   }}
+dependencies { deobfCompile "mezz.jei:jei_1.8.8:2.12.0.49" 
+   compile name: 'Charset-0.0.6'}
 
 minecraft {
     version = "1.8.8-11.15.0.1634-1.8.8"
     runDir = "eclipse"
     mappings = "snapshot_20151227"
-}
-
-dependencies {
-	
 }
 
 processResources
