--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ repositories { maven { url "http://dvs1.progwml6.com/files/maven" }
        dirs 'libs'
    }}
 dependencies { deobfCompile "mezz.jei:jei_1.8.8:2.12.0.49" 
-   compile name: 'Charset-0.0.6'}
+   compile name: 'MCMultiPart-1.0'}
 
 minecraft {
     version = "1.8.8-11.15.0.1634-1.8.8"
