--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "mc1.8.9-v1.8-dev2"
+version = "mc1.8.9-v1.8-beta1"
 group= "mod.chiselsandbits"
 archivesBaseName = "chiselsandbits"
 
