Refactored Placement/Breaking Re-wrote Drawn Regions, both placement and Chiseling. Added new setting to control max size of a drawn regions, by default 4 blocks. Fixed a bug where raytracing on the server would not reflect the same result as the client side. Improved performance of occlusion and raytracing. Improved performance of loading/saving/chiseling and networking.

--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,14 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "mc1.8.9-v1.8-beta2"
+version = "mc1.8.9-v1.8-beta4"
 group= "mod.chiselsandbits"
 archivesBaseName = "chiselsandbits"
 
 repositories {
 	maven { url "http://dvs1.progwml6.com/files/maven" }
 	maven { url "http://maven.amadornes.com/" }
+	flatDir { dirs 'libs' }
 }
 
 dependencies {
