Working on bit bags and bounding boxes.

--- a/build.gradle
+++ b/build.gradle
@@ -51,4 +51,7 @@ processResources
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
+
+    // Move access transformers to META-INF
+    rename '(.+_at.cfg)', 'META-INF/$1'
 }
