Packets for interaction.

--- a/src/main/resources/chiselsandbits_at.cfg
+++ b/src/main/resources/chiselsandbits_at.cfg
@@ -1,3 +1,4 @@
 #baggui
 public net.minecraft.client.gui.inventory.GuiContainer func_146977_a(Lnet/minecraft/inventory/Slot;)V # drawSlot
 public net.minecraft.client.gui.inventory.GuiContainer func_146981_a(Lnet/minecraft/inventory/Slot;II)Z # isMouseOverSlot
+public net.minecraft.client.gui.inventory.GuiContainer field_147006_u # theSlot
