--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,12 @@ repositories {
 }
 
 dependencies {
-	deobfCompile "mezz.jei:jei_1.8.8:2.12.0.49"
+	deobfCompile "mezz.jei:jei_1.8.9:2.16.1.77"
 	deobfCompile "MCMultiPart:MCMultiPart:1.0.4:universal"
 }
 
 minecraft {
-    version = "1.8.8-11.15.0.1634-1.8.8"
+    version = "1.8.9-11.15.0.1693"
     runDir = "eclipse"
     mappings = "snapshot_20151227"
 }
