--- a/build.gradle
+++ b/build.gradle
@@ -28,15 +28,25 @@ dependencies {
 }
 
 minecraft {
-    version = "1.8.8-11.15.0.1634-1.8.8"
+    version = "1.8.9-11.15.0.1694"
     runDir = "eclipse"
     mappings = "snapshot_20151227"
+}
+
+task deobfJar(type: Jar) {
+    from(sourceSets.main.output) {
+        classifier = "deobf"
+    }
 }
 
 jar {
 	manifest {
 		attributes 'FMLAT': 'chiselsandbits_at.cfg'
 	}
+}
+
+artifacts {
+    archives deobfJar
 }
 
 processResources
