--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "mc1.8.9-v1.8-0"
+version = "mc1.8.9-v1.8.1"
 group= "mod.chiselsandbits"
 archivesBaseName = "chiselsandbits"
 
