--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ minecraft {
     version = "1.8.8-11.15.0.1634-1.8.8"
     // version = "1.8.9-11.15.0.1694"
     runDir = "eclipse"
-    mappings = "snapshot_20151227"
+    mappings = "stable_20"
     
     replaceIn "ChiselsAndBits.java"
     replace "@VERSION@", project.version
