--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "mc1.8.9-v1.8.1"
+version = "mc1.8.9-v1.8.3"
 group= "mod.chiselsandbits"
 archivesBaseName = "chiselsandbits"
 
@@ -24,13 +24,12 @@ repositories {
 }
 
 dependencies {
-	deobfCompile "mezz.jei:jei_1.8.8:2.12.0.49"
+	deobfCompile "mezz.jei:jei_1.8.9:2.16.0.74"
 	deobfCompile "MCMultiPart:MCMultiPart:1.0.4:universal"
 }
 
 minecraft {
-    version = "1.8.8-11.15.0.1634-1.8.8"
-    // version = "1.8.9-11.15.0.1694"
+    version = "1.8.9-11.15.0.1697"
     runDir = "eclipse"
     mappings = "stable_20"
     
