--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "mc1.8.9-v1.9.meteor"
+version = "mc1.8.9-v1.9.phil"
 group= "mod.chiselsandbits"
 archivesBaseName = "chiselsandbits"
 
@@ -29,7 +29,7 @@ dependencies {
 }
 
 minecraft {
-    version = "1.8.9-11.15.0.1710"
+    version = "1.8.9-11.15.0.1718"
     runDir = "eclipse"
     mappings = "stable_20"
     
