--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 minecraft {
     version = "1.8.9-11.15.1.1755"
     runDir = "eclipse"
-    mappings = "stable_20"
+    mappings = "snapshot_20160301"
     
     replaceIn "ChiselsAndBits.java"
     replace "@VERSION@", project.version
