--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 }
 
 minecraft {
-    version = "1.8.9-11.15.1.1755"
+    version = "1.9-12.16.0.1766-1.9"
     runDir = "eclipse"
     mappings = "snapshot_20160301"
     
