--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,14 @@ repositories {
 }
 
 dependencies {
-	deobfCompile "mezz.jei:jei_1.8.9:2.27.+"
+	deobfCompile "mezz.jei:jei_1.9:3.0.2.164"
 	deobfCompile "MCMultiPart:MCMultiPart:1.0.8:universal"
 }
 
 minecraft {
-    version = "1.9-12.16.0.1766-1.9"
+    version = "1.9-12.16.0.1768-1.9"
     runDir = "eclipse"
-    mappings = "snapshot_20160301"
-    
+    mappings = "snapshot_nodoc_20160312"    
     replaceIn "ChiselsAndBits.java"
     replace "@VERSION@", project.version
 }
