--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 
+version = "8.3"
 group= "mod.chiselsandbits"
 archivesBaseName = "chiselsandbits"
 
