--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
     }
 }
 
@@ -25,13 +25,13 @@ repositories {
 
 dependencies {
 	deobfCompile "mezz.jei:jei_1.9:3.2.8.182"
-	deobfCompile "MCMultiPart:MCMultiPart-experimental:1.1.0_55:universal"
+	deobfCompile "MCMultiPart:MCMultiPart-experimental:1.2.0_68:universal"
 }
 
 minecraft {
-    version = "1.9-12.16.1.1887"
+    version = "1.9.4-12.17.0.1909-1.9.4"
     runDir = "eclipse"
-    mappings = "snapshot_nodoc_20160312"    
+    mappings = "snapshot_20160518"
     replaceIn "ChiselsAndBits.java"
     replace "@VERSION@", project.version
 }
