--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-version=11.3
+version=11.4-pre5
 
 mc_version=1.10
-forge_version=12.18.0.1983-1.10.0
+forge_version=12.18.0.1999-1.10.0
 
 jei_version=jei_1.9.4:3.4.0.204
 mcmp_version=MCMultiPart-experimental:1.2.0_68:universal
