Tape Measure can now optionally post the size to chat. Tape Measure can now be cleared by shift clicking in the air.

--- a/src/main/resources/chiselsandbits_at.cfg
+++ b/src/main/resources/chiselsandbits_at.cfg
@@ -3,4 +3,4 @@ protected net.minecraft.client.gui.inventory.GuiContainer func_146977_a(Lnet/min
 protected net.minecraft.client.gui.inventory.GuiContainer func_146981_a(Lnet/minecraft/inventory/Slot;II)Z # isMouseOverSlot
 protected net.minecraft.client.gui.inventory.GuiContainer field_147006_u # theSlot
 public net.minecraft.client.gui.FontRenderer func_180455_b(Ljava/lang/String;FFIZ)I #
-
+public net.minecraft.item.EnumDyeColor field_176793_x # chatColor
