--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 version=12.0
 
 mc_version=1.10.2
-forge_version=12.18.0.2001-1.10.0
+forge_version=12.18.1.2017
 
 jei_version=jei_1.10.2:3.7.8.234
-mcmp_version=MCMultiPart-experimental:1.2.0_68:universal
+mcmp_version=MCMultiPart:1.2.1:universal
