--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 version=13.0
 
-mc_version=1.11
-forge_version=13.19.1.2188
+mc_version=1.11.2
+forge_version=13.20.0.2231
 
 jei_version=jei_1.11:4.0.2.194
+mcmp2_version=MCMultiPart2:MCMultiPart-exp:2.0.0_8:universal
