Initial porting of the rendering code.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -11,3 +11,5 @@ public net.minecraft.block.Block field_149781_w # blockResistance
 
 # bagcontainer
 public net.minecraft.inventory.container.Container field_75149_d # listeners
+
+public net.minecraft.client.renderer.BufferBuilder field_178997_d #vertexCount
