--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -13,3 +13,4 @@ public net.minecraft.block.Block field_149781_w # blockResistance
 public net.minecraft.inventory.container.Container field_75149_d # listeners
 
 public net.minecraft.client.renderer.BufferBuilder field_178997_d #vertexCount
+public net.minecraft.client.renderer.model.BakedQuad field_187509_d #sprite
