--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -14,3 +14,7 @@ public net.minecraft.inventory.container.Container field_75149_d # listeners
 
 public net.minecraft.client.renderer.BufferBuilder field_178997_d #vertexCount
 public net.minecraft.client.renderer.model.BakedQuad field_187509_d #sprite
+public net.minecraft.client.gui.FontRenderer field_211127_e #font
+public net.minecraft.item.BlockItem field_150939_a #block
+public net.minecraft.block.AbstractBlock field_235684_aB_ #properties
+public net.minecraft.block.AbstractBlock field_149762_H #soundType
