Advancements, bugfixing and magnification glass.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -19,3 +19,5 @@ public net.minecraft.item.BlockItem field_150939_a #block
 public net.minecraft.block.AbstractBlock field_235684_aB_ #properties
 public net.minecraft.block.AbstractBlock field_149762_H #soundType
 public net.minecraft.client.gui.FontRenderer func_228078_a_(Ljava/lang/String;FFILnet/minecraft/util/math/vector/Matrix4f;ZZ)I #renderString
+
+public net.minecraft.client.gui.IngameGui field_92017_k #remainingHighlightTicks
