First version for 1.16.3

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,6 @@
 modLoader="javafml"
 loaderVersion="[28,)"
+license="GLGPLv3"
 [[mods]] #mandatory
 modId="chiselsandbits"
 version="${file.jarVersion}"
