--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
-modGroup=com.ldtteam.com
+modGroup=com.ldtteam
 modVersion=0.0.1
 modBaseName=chiselsandbits
 
-forgeVersion=32.0.108
-minecraftVersion=1.16.1
-exactMinecraftVersion=1.16.1
+forgeVersion=34.1.5
+minecraftVersion=1.16.3
+exactMinecraftVersion=1.16.3
 mcpChannel=snapshot
-mcpVersion=20200820-1.16.1
-jeiVersion=7.0.1.9
+mcpVersion=20200916-1.16.2
+jeiVersion=7.5.0.42
 dataGeneratorsVersion=0.1.46-ALPHA
