Fix a bunch of other issues:
Closes #549.
Closes #554.
Closes #567.
Closes #543.
Closes #558.

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,5 +9,5 @@ authors="OrionOnline, LDTTeam, AlgorithmX2 "
 description='''
 a mod about Sculpting, Decorating and Aesthetics.
 
-Ported to 1.16.2 by the LDTTeam.
+Ported to 1.16.x by the LDTTeam.
 '''
