Initial progress on getting the paletted storage implementation working.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -21,3 +21,7 @@ public net.minecraft.block.AbstractBlock field_149762_H #soundType
 public net.minecraft.client.gui.FontRenderer func_228078_a_(Ljava/lang/String;FFILnet/minecraft/util/math/vector/Matrix4f;ZZ)I #renderString
 
 public net.minecraft.client.gui.IngameGui field_92017_k #remainingHighlightTicks
+
+public net.minecraft.util.palette.IResizeCallback #enable implementating this
+public net.minecraft.util.palette.HashMapPalette field_186046_a #statePaletteMap
+public net.minecraft.util.palette.ArrayPalette field_186042_a #states
