--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -24,4 +24,7 @@ public net.minecraft.client.gui.IngameGui field_92017_k #remainingHighlightTicks
 
 public net.minecraft.util.palette.IResizeCallback #enable implementating this
 public net.minecraft.util.palette.HashMapPalette field_186046_a #statePaletteMap
+public net.minecraft.util.palette.HashMapPalette field_205509_a #registry
 public net.minecraft.util.palette.ArrayPalette field_186042_a #states
+public net.minecraft.util.palette.ArrayPalette field_205507_a #registry
+public net.minecraft.util.palette.ArrayPalette field_186045_d #arraySize
