--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -28,3 +28,6 @@ public net.minecraft.util.palette.HashMapPalette field_205509_a #registry
 public net.minecraft.util.palette.ArrayPalette field_186042_a #states
 public net.minecraft.util.palette.ArrayPalette field_205507_a #registry
 public net.minecraft.util.palette.ArrayPalette field_186045_d #arraySize
+
+# PaletteContainer
+public net.minecraft.util.palette.PalettedContainer field_186021_b #storage
