--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -31,3 +31,6 @@ public net.minecraft.util.palette.ArrayPalette field_186045_d #arraySize
 
 # PaletteContainer
 public net.minecraft.util.palette.PalettedContainer field_186021_b #storage
+
+# WorldRenderer
+public net.minecraft.client.renderer.WorldRenderer func_228445_b_(Lcom/mojang/blaze3d/matrix/MatrixStack;Lcom/mojang/blaze3d/vertex/IVertexBuilder;Lnet/minecraft/util/math/shapes/VoxelShape;DDDFFFF)V #drawShape
