--- a/build.gradle
+++ b/build.gradle
@@ -189,3 +189,24 @@ dependencies {
     compile 'com.intellij:annotations:+@jar'
     testCompile 'com.intellij:annotations:+@jar'
 }
+
+jar {
+    from sourceSets.api.output
+    from sourceSets.main.output
+
+    manifest {
+        attributes([
+                'Maven-Artifact': "${project.group}:${project.archivesBaseName}:${project.version}:universal",
+                'Timestamp': System.currentTimeMillis(),
+                "Specification-Title": "minecolonies",
+                "Specification-Vendor": "ldtteam",
+                "Specification-Version": "1", // We are version 1 of ourselves
+                "Implementation-Title": project.name,
+                "Implementation-Version": "${project.version}",
+                "Implementation-Vendor" :"ldtteam",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        ])
+    }
+
+    classifier = 'universal'
+}
