--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 modGroup=com.ldtteam
-modVersion=0.3.5-RELEASE
+modVersion=0.6.0-PRE-ALPHA-TESTING
 modBaseName=chiselsandbits
 
 forgeVersion=36.1.4
