--- a/build.gradle
+++ b/build.gradle
@@ -185,9 +185,9 @@ dependencies {
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 
     //Utilities
-    apiCompile 'com.intellij:annotations:+@jar'
-    compile 'com.intellij:annotations:+@jar'
-    testCompile 'com.intellij:annotations:+@jar'
+    apiCompile 'org.jetbrains:annotations:+'
+    compile 'org.jetbrains:annotations:+'
+    testCompile 'org.jetbrains:annotations:+'
 }
 
 jar {
