Fix performance issues related to chiselling.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -34,3 +34,6 @@ public net.minecraft.util.palette.PalettedContainer field_186021_b #storage
 
 # WorldRenderer
 public net.minecraft.client.renderer.WorldRenderer func_228445_b_(Lcom/mojang/blaze3d/matrix/MatrixStack;Lcom/mojang/blaze3d/vertex/IVertexBuilder;Lnet/minecraft/util/math/shapes/VoxelShape;DDDFFFF)V #drawShape
+
+# Profiler
+public net.minecraft.profiler.Profiler field_219916_j #storage
