--- a/build.gradle
+++ b/build.gradle
@@ -247,6 +247,9 @@ dependencies {
     // at runtime, use the full JEI jar
     runtimeOnly fg.deobf("mezz.jei:jei-${project.exactMinecraftVersion}:${project.jeiVersion}")
 
+    // Add spark to track performance issues.
+    runtimeOnly fg.deobf("curse.maven:spark-361579:3245792")
+
     // data generators.
     apiImplementation "com.ldtteam:datagenerators:${project.dataGeneratorsVersion}"
     implementation "com.ldtteam:datagenerators:${project.dataGeneratorsVersion}"
