--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 modGroup=com.ldtteam
-modVersion=1.0.1-ALPHA
+modVersion=1.0.2-BETA
 modBaseName=chiselsandbits
 
 forgeVersion=36.1.16
