--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ minecraftVersion=1.16.5
 exactMinecraftVersion=1.16.5
 additionalMinecraftVersions=1.16.2,1.16.3,1.16.4
 
-mcpChannel=snapshot
-mcpVersion=20200916-1.16.2
+mcpChannel=official
+mcpVersion=1.16.5
 jeiVersion=7.6.1.75
 dataGeneratorsVersion=0.1.46-ALPHA
