Update the Modification Table Model.

--- a/build.gradle
+++ b/build.gradle
@@ -184,7 +184,8 @@ minecraft {
             }
         }
 
-        generateData {
+        generateData { run ->
+            parent project.minecraft.runs.data
             workingDirectory project.file('run')
 
             // Recommended logging data for a userdev environment
@@ -195,6 +196,7 @@ minecraft {
             property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
 
+            inheritArgs false
             args '--all', '--output', file('src/datagen/generated/chiselsandbits'),
                     '--mod', 'chiselsandbits',
                     '--existing', sourceSets.main.resources.srcDirs[0]
@@ -220,6 +222,7 @@ minecraft {
             property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
 
+            inheritArgs false
             args '--all', '--output', file('src/documentation/generated/chiselsandbits'),
                     '--mod', 'chiselsandbits',
                     '--existing', sourceSets.main.resources.srcDirs[0],
