--- a/build.gradle
+++ b/build.gradle
@@ -272,6 +272,8 @@ dependencies {
 
     testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 
+    testImplementation group: 'org.openjdk.jmh', name: 'jmh-generator-annprocess', version: '1.21'
+
     //Utilities
     apiImplementation 'org.jetbrains:annotations:+'
     datagenImplementation 'org.jetbrains:annotations:+'
